menu/menu.css
#banner_img {
    width: 100%;
    margin-top: 100px;
    position: relative;
    z-index: -1;
}

.menu-header-cont {
    text-align: center;
}

.menu-bkfast-lunch {
    display: grid;
    grid-template-columns: auto auto;
    column-gap: 57px;
    margin: auto;
    margin-bottom: 139px;
}

.header.pink-bg {
    text-align: center;
    color: #0A3C9D;
    background-color: #FFB6AD;
    padding-top: 38px;
    padding-bottom: 38px;
    margin: 0;
}

.header.blue-bg {
    text-align: center;
    color:#FFB6AD; 
    background-color: #0A3C9D;
    padding-top: 38px;
    padding-bottom: 38px;
    margin: 0;
}

.header.blue-bg.bkfast-header {
    height: 120px;
    padding-left: 158px;
    padding-right: 147px;
    padding-top: 18px;
    padding-bottom: 18px;
    padding-bottom: 30px;
    padding-top: 5px;
    margin-bottom: 22px;
}

#bkfast-header-span {
    display: block;
    width: 50%;
    width: 303px;
    height: 33px;
    font-family: "Roboto";
    font-style: normal;
    font-weight: bold;
    font-size: 24px;
    line-height: 28px;
    text-transform: none;
    margin: auto;
}

#bakery-header {
    text-align: left;
    width: 543px;
    height: 102px;
    padding: 18px 0 18px 67px;
}

.menu-bkfast-lunch.left {
    width: 610px;
    margin: 0 0 auto 100px;
    display: flex;
    flex-direction: column;
    /* background-color: blanchedalmond; */
}

.bakery-cont {
    height: 628px;
    width: 610px;
}

.bagels-cont {
    height: 997px;
    width: 610px;
}

.sandwiches-cont {
    height: 1399px;
    width: 610px; 
}

.menu-bkfast-lunch.right {
    /* background-color: lightgoldenrodyellow; */
    margin: 0 100px auto 0;
    width: 610px;
    display: flex;
    flex-direction: column;
}
.bkfast-specials-cont {
    width: 610px;
    height: 1066px;
}

.omelettes-cont {
    width: 610px;
    height: 786px;    
}

.wraps-cont {
    width: 610px;
    height: 672px;  
}

.menu-items {
    width: 610px;
    padding-top: 15px;
}

.menu-items .left {
    text-align: left;
    padding-left: 16px;
    line-height: 40px;
    font-family: 'Roboto';
    font-weight: 400;
    font-style: normal;
    font-size: 23.27px;
    padding-bottom: 10px;
}

.menu-items .left.indent {
    text-align: left;
    padding-left: 29.18px;
    line-height: 40px;
    font-family: 'Roboto';
    font-weight: 400;
    font-style: normal;
    font-size: 23.27px;
    padding-bottom: 10px;
}

.menu-items .right {
    text-align: right;
    line-height: 40px;
    font-family: 'Roboto';
    font-weight: 400;
    font-style: normal;
    font-size: 23.27px;
    padding-right: 36px;
    padding-bottom: 10px;
}

.menu-sandwiches-choice {
    font-family: "Roboto";
    font-weight: normal;
    font-style: italic;
    font-size: 24px;
    line-height: 28px;
    width: 430px;
    height: 41px;
    text-align: left;
    padding-bottom: 29px;
}

.menu-bkfast-sandwiches-choice {
    font-family: "Roboto";
    font-weight: normal;
    font-style: italic;
    font-size: 23.2727px;
    line-height: 27px;
    width: 320px;
    height: 40px;
    text-align: left;
}


.menu-special-cont {
    height: 3682px;
    width: 1031px;
    background-color: #FFF8E9;
    box-shadow: 18px 20px #0B3B98;
    margin: auto;
    margin-bottom: 239px;
}

.menu-other-cont {
    height: 621px;
    width: 1240px;
    margin: auto;
    display: grid;
    grid-template-columns: auto auto;
    column-gap: 57px;
}

.menu-other.left {
    width: 610px;
    background-color: lightgreen;
}
.menu-other.right {
    background-color: lightgoldenrodyellow;
    width: 610px;
}

.menu-drinks-cont {
    height: 245px;
    width: 1056px;
    background-color: #FFF8E9;
    box-shadow: 18px 20px #0B3B98;
    margin: auto;
    margin-top: 112px;
    margin-bottom: 304px;
}

